// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`note A note to display an error with steps or links on how to troubleshoot. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#fbe5e5",
      "color": "#ba3b3f",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <div
      className="bg-red-light round-full color-red-dark flex-parent flex-parent--center-main flex-parent--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": "40",
            "width": "40",
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="flex-child prose"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Error
    </div>
    <p>
      Did something not go as planned? Check out the
       
      <a
        href="#"
      >
        troubleshooting guide
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`note A note to display with a message about new products or features. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#e8f5ee",
      "color": "#1b7d4f",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <div
      className="bg-green-light round-full color-green-dark flex-parent flex-parent--center-main flex-parent--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": "40",
            "width": "40",
          }
        }
      >
        <use
          xlinkHref="#icon-marker"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="flex-child prose"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      New!
    </div>
    <p>
      Style components in Mapbox Studio are now available in public beta for every user. To start building, log in to Studio or sign up for an account to start making your first map.
    </p>
  </div>
</div>
`;

exports[`note A warning note to let the user know something has changed or will change. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#feefe2",
      "color": "#945823",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <div
      className="bg-orange-light round-full color-orange-dark flex-parent flex-parent--center-main flex-parent--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": "40",
            "width": "40",
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="flex-child prose"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Be careful
    </div>
    <p>
      This is a warning.
    </p>
  </div>
</div>
`;

exports[`note Default note renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "color": "#587594",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 108 108"
      width={60}
    >
      <circle
        cx="53"
        cy="55"
        fill="#47b9f3"
        r="45"
      />
      <rect
        fill="#1274c6"
        height="34.501"
        rx="5.219"
        ry="5.219"
        transform="rotate(.605 53.4 58.455)"
        width="52.254"
        x="27.273"
        y="41.204"
      />
      <path
        d="M64.1 34.848s-9.912-.76-10.008 8.42-.093 24.736-.093 24.736S58.822 64.96 62.79 65l15.404.163A1.788 1.788 0 0 0 80 63.393l.281-26.601A1.773 1.773 0 0 0 78.527 35z"
        fill="#309ef9"
      />
      <path
        d="M43.971 34.157s10.21-.563 10.11 8.821S53.998 68 53.998 68s-5.25-2.957-9.331-3L28.78 64.83A1.786 1.786 0 0 1 27 63.04l.288-27.286A1.786 1.786 0 0 1 29.106 34z"
        fill="#0d84fd"
      />
    </svg>
  </div>
  <div
    className="flex-child prose"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Note
    </div>
    <p>
      Here is a little thing to note.
    </p>
  </div>
</div>
`;

exports[`note Default note with no image renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "color": "#587594",
    }
  }
>
  <div
    className="flex-child prose"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      Note
    </div>
    <p>
      Here is a little thing to note, but it doesn't have an image.
    </p>
  </div>
</div>
`;

exports[`note Note with custom title. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex-parent flex-parent--row mb18"
  style={
    Object {
      "background": "#f1faff",
      "color": "#587594",
    }
  }
>
  <div
    className="flex-child mr12"
  >
    <svg
      height={60}
      viewBox="0 0 108 108"
      width={60}
    >
      <circle
        cx="53"
        cy="55"
        fill="#47b9f3"
        r="45"
      />
      <rect
        fill="#1274c6"
        height="34.501"
        rx="5.219"
        ry="5.219"
        transform="rotate(.605 53.4 58.455)"
        width="52.254"
        x="27.273"
        y="41.204"
      />
      <path
        d="M64.1 34.848s-9.912-.76-10.008 8.42-.093 24.736-.093 24.736S58.822 64.96 62.79 65l15.404.163A1.788 1.788 0 0 0 80 63.393l.281-26.601A1.773 1.773 0 0 0 78.527 35z"
        fill="#309ef9"
      />
      <path
        d="M43.971 34.157s10.21-.563 10.11 8.821S53.998 68 53.998 68s-5.25-2.957-9.331-3L28.78 64.83A1.786 1.786 0 0 1 27 63.04l.288-27.286A1.786 1.786 0 0 1 29.106 34z"
        fill="#0d84fd"
      />
    </svg>
  </div>
  <div
    className="flex-child prose"
  >
    <div
      className="txt-bold txt-m mb6"
    >
      A very important note
    </div>
    <div>
      <p>
        Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Maecenas sed diam eget risus varius blandit sit amet non magna.
      </p>
      <p>
        Cras mattis consectetur purus sit amet fermentum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Vestibulum id ligula porta felis euismod semper. Nullam id dolor id nibh ultricies vehicula ut id elit. Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna.
      </p>
      <p>
        Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Etiam porta sem malesuada magna mollis euismod. Etiam porta sem malesuada magna mollis euismod.
      </p>
    </div>
  </div>
</div>
`;
